@@ -1,6 +1,18 @@
 #How to run?
 
-You need to access CovidTracker.jar directory and type this command :
-> java -jar Covid19-Tracker
+You need to access CovidTracker.jar directory
+for java sdk 8 type this command:
+> java -jar Covid19-Tracker.jar
 
-We will add more detail later.....
+java sdk 11 or higher:
+
+> java --module-path (you javafx lib directory) --add-modules javafx.controls,javafx.fxml -jar Covid19-Tracker.jar
+
+Example:
+
+>java --module-path /Users/admin/Downloads/javafx-sdk-11.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar Covid19-Tracker.jar
+
+git ad
+
+
+
